--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "Mozilla Public License",
   "dependencies": {
+    "body-parser": "^1.10.1",
     "bootstrap": "^3.3.0",
     "compression": "^1.3.0",
     "express": "4.10.8",
